[package]
name = "binder"
version = "0.1.0"
edition = "2021"
description = "Bind IP for TCP connections of arbitrary dynamic programs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2.0"
lazy_static = "1.4.0"
libc = "0.2.142"
redhook = { path = "redhook" }
resolv-conf = "0.7.0"


[lib]
name = "binder"
crate_type = ["cdylib"]
